[workspace]
members = [
    "querying",
    "reporter",
    "reports",
    "website",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12.24", default-features = false, features = ["stream", "rustls-tls-webpki-roots", "json"] }
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
